crates/biome_js_analyze/tests/specs/nursery/noPlaywrightElementHandle/invalid/dollar.js
/* should generate diagnostics */
const button = await page.$('button');

